--- a/app/src/main/res/drawable/item_bg.xml
+++ b/app/src/main/res/drawable/item_bg.xml
@@ -6,7 +6,7 @@
         android:right="10dp"
         android:bottom="10dp">
         <shape android:shape="rectangle">
-            <solid android:color="#F5F8F5"/>
+            <solid android:color="#D1DAE8"/>
             <padding
                 android:left="1dp"
                 android:top="1dp"
