--- a/app/src/main/res/layout/activity_list_account.xml
+++ b/app/src/main/res/layout/activity_list_account.xml
@@ -7,12 +7,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.ListAccountActivity">
-    
+
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/bottom_navigation_container"
-        android:layout_above="@+id/bottom_navigation"/>
+        android:layout_width="match_parent"
+        android:layout_height="592dp"
+        android:layout_above="@+id/bottom_navigation"
+        android:layout_marginTop="60dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="18dp" />
     
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
