--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
         android:layout_marginLeft="45dp"
-        android:text="Login"
+        android:text="@string/label"
         android:textSize="30sp"
         android:textStyle="bold"
         android:textColor="@android:color/black" />
@@ -42,7 +42,7 @@
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email"
+            android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
             android:drawableStart="@drawable/ic_email"
             android:drawablePadding="10dp"
@@ -53,23 +53,13 @@
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="@string/password_hint"
             android:inputType="textPassword"
             android:drawableStart="@drawable/ic_password"
             android:drawablePadding="10dp"
             android:padding="12dp"
             android:background="@drawable/edittext_background"
             android:layout_marginTop="16dp"/>
-
-        <TextView
-            android:id="@+id/createAccount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Create Account"
-            android:textColor="@android:color/darker_gray"
-            android:layout_gravity="center"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="110dp"/>
 
     </LinearLayout>
 
