--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -37,14 +37,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="52dp"
+        android:background="@drawable/bg_transparent_button"
+        android:backgroundTint="@drawable/bg_transparent_button"
         android:text="Button"
         app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.425"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="@drawable/bg_transparent_button"
-        android:backgroundTint="@drawable/bg_transparent_button"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -58,5 +57,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/avatar"
         android:backgroundTint="@color/black"/>
+
+    <Button
+        android:id="@+id/button"
+        style="@style/edit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button2" />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
