--- a/app/src/main/res/values/style_button.xml
+++ b/app/src/main/res/values/style_button.xml
@@ -15,4 +15,17 @@
         <item name="strokeWidth">2dp</item>
         <item name="cornerRadius">5dp</item>
     </style>
+    <style name="save_button">
+        <item name="android:minHeight">0dp</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:backgroundTint">#09304F</item>
+        <item name="android:textSize">15sp</item>
+        <item name="cornerRadius">20dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+    </style>
 </resources>
