finish splashScreen - update minSdk to 31

--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -15,4 +15,8 @@
         <item name="strokeWidth">2dp</item>
         <item name="cornerRadius">5dp</item>
     </style>
+    <style name="splash_screen">
+        <item name="background">@color/white</item>
+
+    </style>
 </resources>
