--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -7,4 +7,8 @@
     <item android:id="@+id/account"
         android:title="Account"
         android:icon="@drawable/user"/>
+
+    <item android:id="@+id/category"
+        android:title="Category"
+        android:icon="@drawable/arrow_white"/>
 </menu>
