--- a/app/src/main/res/drawable/edittext_bg.xml
+++ b/app/src/main/res/drawable/edittext_bg.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- res/drawable/edittext_rounded_corners.xml -->
+<?xml version="1.0" encoding="utf-8"?><!-- res/drawable/edittext_rounded_corners.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="20dp" /> <!-- Corner radius in dp -->
@@ -9,6 +8,5 @@
         android:left="10dp"
         android:top="5dp"
         android:right="10dp"
-        android:bottom="5dp"
-        />
+        android:bottom="5dp" />
 </shape>
