--- a/app/src/main/res/layout/row_account.xml
+++ b/app/src/main/res/layout/row_account.xml
@@ -20,8 +20,7 @@
         android:scaleType="centerCrop"
         android:background="@drawable/img_bg"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-    />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_account_name"
