--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/home"
+    <item
+        android:id="@+id/home"
         android:title="Home"
-        android:icon="@drawable/house"/>
+        android:icon="@drawable/house" />
 
-    <item android:id="@+id/account"
+    <item
+        android:id="@+id/account"
         android:title="Account"
-        android:icon="@drawable/user"/>
+        android:icon="@drawable/user" />
 
-    <item android:id="@+id/category"
+    <item
+        android:id="@+id/category"
         android:title="Category"
-        android:icon="@drawable/arrow_white"/>
+        android:icon="@drawable/arrow_white" />
 </menu>
