--- a/app/src/main/res/layout/activity_view_service.xml
+++ b/app/src/main/res/layout/activity_view_service.xml
@@ -5,7 +5,7 @@
     android:id="@+id/view_service"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.ViewServiceActivity">
+    tools:context=".ui.samplepackage.activity.ViewServiceActivity">
 
     <!-- Header -->
 
