--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    tools:context=".MainActivity"
-    android:id="@+id/main">
+    tools:context=".ui.samplepackage.activity.LoginActivity">
     <!-- Top background image -->
     <ImageView
-        android:id="@+id/topBackground"
+        android:id="@+id/login_top_background"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:scaleType="centerCrop"
@@ -17,18 +14,18 @@
         android:layout_alignParentTop="true" />
 
     <TextView
-        android:id="@+id/loginTitle"
+        android:id="@+id/login_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
-        android:layout_marginLeft="45dp"
-        android:text="Login"
+        android:layout_marginStart="45dp"
+        android:text="@string/login_title"
         android:textSize="30sp"
         android:textStyle="bold"
         android:textColor="@android:color/black" />
 
     <LinearLayout
-        android:id="@+id/loginForm"
+        android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -39,21 +36,21 @@
         android:layout_margin="16dp">
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/login_identify"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
+            android:hint="@string/login_identify_hint"
+            android:inputType="text"
             android:drawableStart="@drawable/ic_email"
             android:drawablePadding="10dp"
             android:padding="12dp"
             android:background="@drawable/edittext_background"/>
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/login_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="@string/login_password_hint"
             android:inputType="textPassword"
             android:drawableStart="@drawable/ic_password"
             android:drawablePadding="10dp"
@@ -62,60 +59,28 @@
             android:layout_marginTop="16dp"/>
 
         <TextView
-            android:id="@+id/createAccount"
-            android:layout_width="wrap_content"
+            android:id="@+id/login_forgot_password"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="Create Account"
-            android:textColor="@android:color/darker_gray"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
-            android:layout_marginRight="110dp"/>
+            android:layout_marginEnd="90dp"
+            android:text="@string/login_forgot_password"
+            android:textColor="@android:color/darker_gray" />
 
     </LinearLayout>
 
     <Button
-        android:id="@+id/signin"
+        android:id="@+id/btn_signin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/signin"
-        android:textSize="20dp"
+        android:text="@string/login_signin_button"
+        android:textSize="20sp"
         android:textColor="@android:color/white"
-        android:backgroundTint="@color/sigin_button"
+        android:backgroundTint="@color/signin_button"
         android:layout_margin="32dp"
-        android:layout_below="@id/loginForm"
+        android:layout_below="@id/login_form"
         android:layout_centerHorizontal="true" />
-
-    <LinearLayout
-        android:id="@+id/bottomBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:padding="8dp"
-        android:background="@color/sidebar_backgr"
-        android:gravity="center">
-
-        <Button
-            android:id="@+id/backToHome"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="@string/back_to_main"
-            android:textColor="@android:color/white"
-            android:backgroundTint="@color/sidebar_button"
-            />
-
-        <Button
-            android:id="@+id/forgotPassword"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="@string/forgot_password"
-            android:textColor="@android:color/white"
-            android:backgroundTint="@color/sidebar_button2"
-            android:layout_marginStart="8dp" />
-
-    </LinearLayout>
 
 </RelativeLayout>
 
