--- a/app/src/main/res/layout/row_serivice_child.xml
+++ b/app/src/main/res/layout/row_serivice_child.xml
@@ -5,15 +5,13 @@
 
     <!--CardView that holds the elements
         of the child RecyclerView -->
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
-
         <TextView
             android:id="@+id/tv_child_item_service_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Service name" />
-    </androidx.cardview.widget.CardView>
+            android:layout_width="90dp"
+            android:layout_height="32dp"
+            android:background="@drawable/button"
+            android:backgroundTint="#8DA2BF"
+            android:gravity="center"
+            android:text="Sinh nhật"
+            android:textColor="#0C0C0C"/>
 </FrameLayout>
