--- a/app/src/main/res/layout/fragment_screen_saver.xml
+++ b/app/src/main/res/layout/fragment_screen_saver.xml
@@ -59,7 +59,7 @@
         android:id="@+id/button3"
         style="@style/save_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:text="Login"
