--- a/app/src/main/res/layout/row_account.xml
+++ b/app/src/main/res/layout/row_account.xml
@@ -18,7 +18,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:scaleType="centerCrop"
-        android:background="@drawable/img_bg"
+        android:background="@drawable/hotel_logo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
