--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -59,7 +59,7 @@
         android:backgroundTint="@color/black"/>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_edit_account"
         style="@style/edit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
