--- a/app/src/main/res/layout/row_account.xml
+++ b/app/src/main/res/layout/row_account.xml
@@ -96,12 +96,12 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_account_name" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_edit_account"
+        style="@style/edit_button"
         android:layout_width="77dp"
         android:layout_height="34dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="19dp"
-        style="@style/edit_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_account_status" />
 
