--- a/app/src/main/res/values/style_button.xml
+++ b/app/src/main/res/values/style_button.xml
@@ -11,6 +11,17 @@
         <item name="cornerRadius">5dp</item>
     </style>
 
+    <style name="set_delete_button">
+        <item name="android:textSize">10sp</item>
+        <item name="android:text">Set Delete</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:backgroundTint">#EABCB9</item>
+        <item name="strokeColor">#F44336</item>
+        <item name="strokeWidth">2dp</item>
+        <item name="cornerRadius">5dp</item>
+    </style>
+
     <style name="save_button">
         <item name="android:minHeight">0dp</item>
         <item name="android:minWidth">0dp</item>
