--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.auth.activity.LoginActivity">
 
     <!-- Top section with profile picture and email -->
     <LinearLayout
@@ -37,7 +37,7 @@
             android:id="@+id/room_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/roomName"
+            android:text="@string/room_name"
             android:textSize="18sp"
             android:textColor="@color/black" />
 
