--- a/app/src/main/res/layout/edit_account.xml
+++ b/app/src/main/res/layout/edit_account.xml
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/edittext_bg"
-            android:hint="@string/password"
+            android:hint="@string/password_hint"
             android:inputType="textPassword" />
 
         <EditText
@@ -55,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/edittext_bg"
-            android:hint="@string/password_confirm"
+            android:hint="@string/confirm_password"
             android:inputType="textPassword" />
 
         <EditText
