--- a/app/src/main/res/layout/row_account.xml
+++ b/app/src/main/res/layout/row_account.xml
@@ -18,7 +18,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:scaleType="centerCrop"
-        android:background="@drawable/img_bg"
+        android:background="@drawable/image_border"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
@@ -51,7 +51,7 @@
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/checked" />
+        app:srcCompat="@drawable/chef" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/expandable_layout"
