--- a/app/src/main/res/layout/row_category.xml
+++ b/app/src/main/res/layout/row_category.xml
@@ -16,7 +16,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/bg1"
+            android:background="@drawable/baseline_area_chart_24"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -70,7 +70,7 @@
                     android:layout_width="40dp"
                     android:layout_height="80dp"
                     android:layout_alignParentRight="true"
-                    android:src="@drawable/android_image_1" />
+                    android:src="@drawable/baseline_arrow_back_24" />
             </RelativeLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
