--- a/app/src/main/res/layout/row_service_child.xml
+++ b/app/src/main/res/layout/row_service_child.xml
@@ -9,7 +9,7 @@
             android:id="@+id/tv_child_item_service_name"
             android:layout_width="90dp"
             android:layout_height="32dp"
-            android:background="@drawable/button"
+            android:background="@drawable/avatar"
             android:backgroundTint="#8DA2BF"
             android:gravity="center"
             android:text="Sinh nhật"
