--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--Splash screen-->
+    <style name="bg_main">
+        <item name="android:background">
+            #FFFFFF
+        </item>
+    </style>
 
+    <style name="splash_screen">
+        <item name="background">@color/white</item>
+    </style>
+
+    <!--Button style-->
     <style name="edit_button">
         <item name="android:textSize">10sp</item>
         <item name="android:text">Edit</item>
@@ -11,7 +22,6 @@
         <item name="strokeWidth">2dp</item>
         <item name="cornerRadius">5dp</item>
     </style>
-
     <style name="save_button">
         <item name="android:minHeight">0dp</item>
         <item name="android:minWidth">0dp</item>
@@ -25,7 +35,6 @@
         <item name="android:paddingTop">10dp</item>
         <item name="android:paddingBottom">10dp</item>
     </style>
-
     <style name="back_button">
         <item name="android:minHeight">0dp</item>
         <item name="android:minWidth">0dp</item>
@@ -38,5 +47,19 @@
         <item name="android:textStyle">bold</item>
         <item name="android:paddingTop">10dp</item>
         <item name="android:paddingBottom">10dp</item>
+    </style>
+    <!--Account button-->
+    <style name="edit_account_input">
+        <item name="android:background">#FFFFFF</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColorHint">#C1C6CA</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:elevation">20dp</item>
+        <item name="cornerRadius">20dp</item>
+        <item name="android:layout_marginBottom">15dp</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
     </style>
 </resources>
