fix: rebase project

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.Hsb" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor">@color/gray</item>
         <item name="android:windowBackground">@color/white</item>
     </style>
 
@@ -10,6 +11,7 @@
     <style name="Theme.Splash" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_screen_background</item>
         <item name="android:windowSplashScreenAnimatedIcon">@drawable/orchid_hotel_logo</item>
+        <item name="android:colorBackground">@color/white</item>
         <item name="android:windowSplashScreenBackground">@color/white</item>
         <item name="android:windowSplashScreenAnimationDuration">2000</item>
     </style>
